fix footer overlapping content on smaller screens

--- a/editor/src/styles.scss
+++ b/editor/src/styles.scss
@@ -16,6 +16,7 @@ body {
 
 body {
   min-width: 300px;
+  padding-bottom: 30px;
 }
 
 code {
